--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/merriweather": "^5.0.8",
+    "@fontsource/montserrat": "^5.0.16",
     "astro": "^4.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
