--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/montserrat": "^5.0.16",
     "astro": "^4.1.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.3.3"
   }
 }
