--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/merriweather": "^5.0.8",
-    "@fontsource/montserrat": "^5.0.16",
+    "@fontsource-variable/nunito": "^5.0.17",
+    "@fontsource/poppins": "^5.0.8",
     "astro": "^4.1.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
