--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/cloudflare": "^8.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/nunito": "^5.0.17",
     "@fontsource/poppins": "^5.0.8",
