--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
