--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/nunito": "^5.0.17",
     "@fontsource/poppins": "^5.0.8",
     "astro": "^4.2.1",
+    "moment": "^2.30.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.3.3"
