--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -10,11 +10,15 @@ jobs:
       deployments: write
     name: Deploy to Cloudflare Pages
     steps: 
-      - name: Setup Node w/ pnpm
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm i -g pnpm
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with: 
+          version: 8.10.2
+          run_install: false
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build Blog
